# metaprogramming

./: .gitignore  CMakeLists.txt  README.adoc
.github/classroom/: autograding.json
src/task1/: smoke_test.cpp  typeset.hpp
src/task2/: pretty_print.hpp  smoke_test.cpp
src/task3/: projections.hpp  smoke_test.cpp
